--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "dependencies": {
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
+    "mongoose": "^7.3.1",
+    "shortid": "^2.2.16",
     "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
+    "@types/shortid": "^0.0.29",
     "source-map-support": "^0.5.21",
     "tslint": "^6.1.3",
     "typescript": "^5.1.3"
